<resources>
    <string name="app_name">MarketPlace</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="login_tittle">Sign In</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="login_button">Log in</string>

    <string name="ups">¡UPS!</string>

    <string name="wrong_identification">El nombre de usuario o la contraseña son incorrectos.</string>

    <string name="ok">Aceptar</string>


</resources>
