<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="205dp"
    android:layout_height="136dp" android:id="@+id/edit_name" android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="3dp" android:background="#888888"
    >
    <LinearLayout
        android:layout_width="200dp" android:layout_height="130dp"
        android:layout_gravity="center" android:orientation="vertical"  android:background="#25262A">
        <TextView
            android:id="@+id/lbl_your_name" android:text="@string/ups"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#888888"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrong_identification"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/modal_button"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="#888888"
            android:textColor="#FFFFFF"
            android:text="@string/ok"/>
    </LinearLayout>

</LinearLayout>